# NCGMGR

./: .eslintrc.js  .gitignore  README.md  index.html  jest.config.js  mkdocs.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: development.md  index.md  users-guide.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundles.rs  config.rs  dependencies.rs  error.rs  git.rs  log.rs  main.rs  nodecg.rs  npm.rs
src/__mocks__/: store.ts  tauri.ts  timeout.ts
src/__tests__/: App.test.ts
src/__tests__/__snapshots__/: App.test.ts.snap
src/components/: BundleInstaller.vue  BundleManager.vue  ConfigWindow.vue  DependencyChecker.vue  ErrorList.vue  HelloWorld.vue  InitialInstallDirectorySetup.vue  InstallDirectoryConfig.vue  InstallFolderConfig.vue  InstallManager.vue  NodecgStarter.vue  NodecgStatus.vue  StatusRow.vue  bundleInstaller.vue  bundleManager.vue  installManager.vue  installer.vue  logDisplay.vue  logOverlay.vue  statusRow.vue
src/components/__tests__/: BundleInstaller.test.ts  BundleManager.test.ts  ConfigWindow.test.ts  DependencyChecker.test.ts  ErrorList.test.ts  InstallManager.test.ts  StatusRow.test.ts  bundleInstaller.test.ts  bundleManager.test.ts  installManager.test.ts  installer.test.ts  logDisplay.test.ts  logOverlay.test.ts  statusRow.test.ts
src/components/bundleList/: BundleConfig.vue  BundleList.vue
src/components/bundleSettings/: BundleList.vue
src/components/ipl/: iplButton.vue  iplInput.vue  iplLabel.vue  iplOverlay.vue  iplSpace.vue
src/components/log/: LogDisplay.vue  LogOverlay.vue  ProgressDisplay.vue
src/components/mgr/: MgrOverlay.vue
src/components/statusBar/: StatusBar.vue
src/service/: dependencyService.ts  messagingService.ts  nodecg.ts  nodecgService.ts
src/service/__tests__/: dependencyService.test.ts  messaging.test.ts  messagingService.test.ts  nodecg.test.ts  nodecgService.test.ts
src/store/: config.ts  configStore.ts  dependencyStore.ts  errorHandlerStore.ts  log.ts  logStore.ts  nodecg.ts  nodecgStore.ts  status.ts
src/store/__tests__/: config.test.ts  configStore.test.ts  dependencyStore.test.ts  errorHandlerStore.test.ts  log.test.ts  logStore.test.ts  nodecg.test.ts  nodecgStore.test.ts
src/styles/: badges.scss  colors.scss  colors.ts  layout.scss  overrides.scss  table.scss  text.scss  window.scss
src/types/: log.ts  nodecg.ts  package.ts
src/util/: color.ts  fs.ts  generateId.ts  log.ts  nodecg.ts  package.ts  string.ts  stringUtil.ts
src/util/__tests__/: color.test.ts  fs.test.ts  generateId.test.ts  log.test.ts  nodecg.test.ts  package.test.ts  string.test.ts  stringUtil.test.ts
(+39 files in other folders)
