[package]
name = "ncgmgr"
version = "0.6.0"
description = "Helps manage NodeCG installations."
authors = [ "inkfarer" ]
license = ""
repository = ""
default-run = "ncgmgr"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.80"
serde = { version = "1.0.137", features = [ "derive" ] }
git2 = "0.14.2"
semver-parser = "0.10.2"
itertools = "0.10.3"
unwrap_or = "1.0.0"
sysinfo = "0.30.8"
rm_rf = "0.6.1"
futures-util = "0.3.30"
flate2 = "1.0.28"
tar = "0.4.40"

[dependencies.tauri]
version = "1.6.1"
features = ["api-all", "macos-private-api", "process-command-api", "http-api"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
