[package]
name = "ncgmgr"
version = "0.7.0"
description = "Helps manage NodeCG installations."
authors = [ "inkfarer" ]
license = ""
repository = ""
default-run = "ncgmgr"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.11", features = [] }

[dependencies]
serde_json = "1.0.80"
serde = { version = "1.0.137", features = [ "derive" ] }
git2 = "0.18.3"
semver-parser = "0.10.2"
itertools = "0.12.1"
unwrap_or = "1.0.0"
sysinfo = "0.30.8"
rm_rf = "0.6.1"
futures-util = "0.3.30"
flate2 = "1.0.28"
tar = "0.4.40"
openssl = { version = "0.10", features = ["vendored"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
thiserror = "1.0.58"
reqwest = { version = "^0.11", features = ["json"] }
tauri-plugin-dialog = "2.0.0-beta.4"
tauri-plugin-fs = "2.0.0-beta.4"
tauri-plugin-os = "2.0.0-beta.3"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-http = "2.0.0-beta.4"
tauri-plugin-store = "2.0.0-beta.4"

[dependencies.tauri]
version = "2.0.0-beta"
features = [ "macos-private-api"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
